# Scheduler-FastAPI-Aiogram3

./: .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose.yaml  docker-compose.yml  exceptions.py  grafana-dashboard.json  jobs.sqlite  logger.py  main.py  middleware.py  prometheus.yml  pyproject.toml  redis_init.py  render.yaml  requirements.txt
app/auth/: auth.py  authentication.py  dependencies.py
app/models/: booking_model.py  notification_model.py  telegram_model.py  time_model.py  user_model.py
app/repository/: base_repo.py  booking_repo.py  notification_repo.py  notification_respo.py  telegram_repo.py  user_repo.py
app/routers/: auth_router.py  booking_router.py  main_router.py  not_found_router.py  notification_router.py  user_router.py  websocket_router.py
app/schemas/: booking_schemas.py  help_schemas.py  jwt_token.py  notification_schemas.py  tg_schema.py  user_schema.py
app/static/: style.css
app/tasks/: apscheduler.py  celery_app.py  email_templates.py  tasks.py
app/utils/: current_time.py  generate_time.py  redis_cache.py  reminder.py  templating.py
bot/: admin_filter.py  admin_handler.py  bot_service.py  keyboards.py  run.py  state.py  state_for_admin.py  user_handler.py
migrations/: env.py
migrations/versions/: 1326481e00c8_.py  16fbe33cb234_.py  1754c69ea396_.py  1f8ec28c2de2_.py  233024fd6762_.py  2f0498cd9185_.py  4973e15a4eb3_.py  4b89d4ac8dd3_.py  4e2bf192fe45_.py  549992973f71_.py  7140ca5ceb88_.py  78b6167604e0_.py  83aacca06626_.py  8725f4e5a9a9_.py  91370e7115df_.py  9c980bf53e5f_.py  af90d4d1f1a7_.py  (+10 more)
(+48 files in other folders)
