[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["maksim <knyazev.maksim2852@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
alembic = "^1.13.1"
pydantic-settings = "^2.3.3"
bcrypt = "4.0.1"
asyncpg = "^0.29.0"
pip = "^24.1"
install = "^1.3.5"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pyright = "^1.1.368"
celery = "^5.4.0"
fastapi-cache = {extras = ["redis"], version = "^0.1.0"}
fastapi-cache2 = "^0.2.1"
redis = "^5.0.7"
flower = "^2.0.1"
fastapi-pagination = "^0.12.26"
gunicorn = "^22.0.0"
pytz = "^2024.1"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
autoflake = "^2.3.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.11.0"}
python-json-logger = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.autoflake]
check_diff = false
imports = ["sqlalchemy", "app", "fastapi"]